--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
         "@chakra-ui/theme-tools": "^1.3.1",
         "@emotion/react": "^11",
         "@emotion/styled": "^11",
+        "@fontsource/allerta": "^4.5.0",
         "framer-motion": "^5",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-icons": "^4.3.1"
     },
     "devDependencies": {
         "@babel/core": "^7.16.7",
