--- a/package.json
+++ b/package.json
@@ -1,61 +1,58 @@
 {
-    "name": "funimation-extended",
-    "version": "1.0.0",
-    "private": true,
-    "description": "Improve the funimation experience",
-    "license": "MIT",
-    "author": "xannysan",
-    "main": "index.js",
-    "scripts": {
-        "build": "webpack --config config/webpack.prod.js",
-        "dev": "webpack --watch --config config/webpack.dev.js",
-        "postinstall": "npx sort-package-json",
-        "lint": "eslint ./src --ext ts,tsx",
-        "serve": "npx webpack serve --config config/webpack.dev.js"
-    },
-    "dependencies": {
-        "@chakra-ui/react": "^1.7.4",
-        "@chakra-ui/theme-tools": "^1.3.1",
-        "@emotion/react": "^11",
-        "@emotion/styled": "^11",
-        "@fontsource/allerta": "^4.5.0",
-        "framer-motion": "^5",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-icons": "^4.3.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.16.7",
-        "@babel/plugin-proposal-class-properties": "^7.16.7",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-transform-runtime": "^7.16.8",
-        "@babel/preset-env": "^7.16.8",
-        "@babel/preset-react": "^7.16.7",
-        "@babel/preset-typescript": "^7.16.7",
-        "@babel/runtime": "^7.16.7",
-        "@types/chrome": "^0.0.176",
-        "@types/node": "^17.0.8",
-        "@types/react": "^17.0.38",
-        "@types/react-dom": "^17.0.11",
-        "@typescript-eslint/eslint-plugin": "^5.9.1",
-        "@typescript-eslint/parser": "^5.9.1",
-        "babel-loader": "^8.2.3",
-        "clean-webpack-plugin": "^4.0.0",
-        "copy-webpack-plugin": "^10.2.0",
-        "css-loader": "^6.5.1",
-        "eslint": "^8.6.0",
-        "eslint-plugin-react": "^7.28.0",
-        "eslint-plugin-react-hooks": "^4.3.0",
-        "html-webpack-plugin": "^5.5.0",
-        "progress-bar-webpack-plugin": "^2.1.0",
-        "react-test-renderer": "^17.0.2",
-        "sass-loader": "^12.4.0",
-        "style-loader": "^3.3.1",
-        "typescript": "^4.5.4",
-        "webpack": "^5.66.0",
-        "webpack-cli": "^4.9.1",
-        "webpack-dev-server": "^4.7.3",
-        "webpack-env": "^0.8.0",
-        "webpack-merge": "^5.8.0"
-    }
+  "name": "funimation-extended",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Improve the funimation experience",
+  "license": "MIT",
+  "author": "xannysan",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack --config config/webpack.prod.js",
+    "dev": "webpack --watch --config config/webpack.dev.js",
+    "postinstall": "npx sort-package-json",
+    "lint": "eslint ./src --ext ts,tsx",
+    "serve": "npx webpack serve --config config/webpack.dev.js"
+  },
+  "dependencies": {
+    "@chakra-ui/react": "^1.7.4",
+    "@chakra-ui/theme-tools": "^1.3.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@fontsource/allerta": "^4.5.0",
+    "framer-motion": "^5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.16.8",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/chrome": "^0.0.176",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.0",
+    "css-loader": "^6.5.1",
+    "eslint": "^8.6.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "html-webpack-plugin": "^5.5.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.5.4",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-env": "^0.8.0",
+    "webpack-merge": "^5.8.0",
+    "zip-webpack-plugin": "^4.0.1"
+  }
 }
