--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,9 @@
 {
-  "semi": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "singleQuote": true,
   "trailingComma": "es5",
-  "singleQuote": false,
-  "printWidth": 120,
-  "tabWidth": 4,
-  "endOfLine": "auto",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": true,
-  "arrowParens": "avoid"
+  "requirePragma": false,
+  "arrowParens": "always",
+  "bracketSameLine": false
 }
