--- a/package.json
+++ b/package.json
@@ -7,22 +7,38 @@
   "author": "xannysan",
   "main": "index.js",
   "scripts": {
+    "prebuild": "del-cli build && cross-env NODE_ENV='production'",
     "build": "webpack --config config/webpack.prod.js",
     "dev": "webpack --watch --config config/webpack.dev.js",
-    "postinstall": "npx sort-package-json",
-    "lint": "eslint ./src --ext ts,tsx",
-    "serve": "npx webpack serve --config config/webpack.dev.js"
+    "lint": "eslint src --ext ts,tsx",
+    "serve": "npx webpack serve --config config/webpack.dev.js",
+    "themetype": "npx chakra-cli tokens .\\src\\components\\theme.ts"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "dependencies": {
     "@chakra-ui/react": "^1.7.4",
     "@chakra-ui/theme-tools": "^1.3.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@extend-chrome/messages": "^1.2.2",
+    "@extend-chrome/storage": "^1.5.0",
     "@fontsource/allerta": "^4.5.0",
     "framer-motion": "^5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "webext-bridge": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -33,25 +49,28 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@types/chrome": "^0.0.176",
+    "@types/firefox-webext-browser": "^94.0.1",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "babel-loader": "^8.2.3",
-    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.2",
+    "prettier": "^2.5.1",
     "progress-bar-webpack-plugin": "^2.1.0",
-    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.0",
     "typescript": "^4.5.4",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "webpack-env": "^0.8.0",
     "webpack-merge": "^5.8.0",
     "zip-webpack-plugin": "^4.0.1"
   }
