--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
   "author": "xannysan",
   "main": "index.js",
   "scripts": {
-    "prebuild": "del-cli build && cross-env NODE_ENV='production'",
-    "build": "webpack --config config/webpack.prod.js",
-    "dev": "webpack --watch --config config/webpack.dev.js",
-    "lint": "eslint src --ext ts,tsx",
-    "serve": "npx webpack serve --config config/webpack.dev.js",
-    "themetype": "npx chakra-cli tokens .\\src\\components\\theme.ts"
+    "prebuild": "del-cli dist && cross-env NODE_ENV='production'",
+    "build": "cross-env NODE_ENV=production rollup -c",
+    "dev": "rollup -c -w",
+    "lint": "eslint src"
   },
   "browserslist": {
     "production": [
@@ -34,20 +32,22 @@
     "@extend-chrome/messages": "^1.2.2",
     "@extend-chrome/storage": "^1.5.0",
     "@fontsource/allerta": "^4.5.0",
+    "@rollup/plugin-image": "^2.1.1",
+    "@rollup/plugin-replace": "^3.0.1",
     "framer-motion": "^5",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
+    "react-icons": "4.2.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "webext-bridge": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.16.8",
-    "@babel/preset-env": "^7.16.8",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/chrome": "^0.0.176",
     "@types/firefox-webext-browser": "^94.0.1",
     "@types/node": "^17.0.8",
@@ -55,23 +55,18 @@
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "babel-loader": "^8.2.3",
-    "copy-webpack-plugin": "^10.2.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.5.1",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.5.2",
     "prettier": "^2.5.1",
-    "progress-bar-webpack-plugin": "^2.1.0",
-    "terser-webpack-plugin": "^5.3.0",
-    "typescript": "^4.5.4",
-    "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-merge": "^5.8.0",
-    "zip-webpack-plugin": "^4.0.1"
+    "rollup": "^2.66.1",
+    "rollup-plugin-chrome-extension": "^3.6.7",
+    "rollup-plugin-empty-dir": "^1.0.5",
+    "rollup-plugin-zip": "^1.0.3",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.4"
   }
 }
